Made it work, starting to add igniter

--- a/.gitignore
+++ b/.gitignore
@@ -20,7 +20,10 @@ erl_crash.dump
 *.ez
 
 # Ignore package tarball (built via "mix hex.build").
-spellrider-*.tar
+spellweaver-*.tar
 
 # Temporary files, for example, from tests.
 /tmp/
+node_modules
+package.json
+bun.lock
